--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-   "include": [
-    "src/**/*" // Inclua todos os arquivos na pasta src
-  ],
-   "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
